# aoc24

./: .gitignore  cabal.project
01/: aoc2401.cabal
01/app/: Main.hs  aoc2401.m
02/app/: aoc2402.m
